fix search, add no-image file, add erbs

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
-<h1>BeerFind</h1>
-<input placeholder="Enter Beer" type="text" id="beer-search" />
-<button id="beer-search">Submit</button>
+<form action='/search' method='GET'>
+  <input placeholder="Enter Beer" type="text" name="beer" />
+  <button id="beer-search">Submit</button>
+</form>
