--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,21 @@
 <!doctype html>
 <html>
 <head>
-  <title>BeerFind</title>
+  <title>What's On Tap?</title>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div id="header">
+    <h1>What's On Tap?</h1>
+  </div>
+
   <div class="container">
     <%= yield %>
+  </div>
+
+  <div id="footer">
   </div>
 </body>
 </html>
 <script src="/js/jquery.js" type="text/javascript"></script>
 <script src="/js/script.js" type="text/javascript"></script>
-<!-- <script src="http://api.brewerydb.com/get_data?callback=apiStatus"></script> -->
-<!-- <script>function apiStatus(data) { console.log(data); }</script> -->
