--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,10 @@
-<form action='/search' method='GET'>
-  <input placeholder="Enter Beer" type="text" name="beer" />
-  <button id="beer-search">Submit</button>
-</form>
+<div class="row intro">
+  <div class="container" id="welcome-text">
+    <h2>Welcome to Beer On Tap</h2>
+    <h3>Make an informed decision</h3>
+    <form action='/search' method='GET'>
+      <input placeholder="What's on tap?" type="text" name="beer" id="searchbox"/>
+      <button class="btn waves-effect waves-light amber darken-2" id="beer-search">Search</button>
+    </form>
+  </div>
+<div>
