--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,21 +1,36 @@
 <!doctype html>
 <html>
 <head>
-  <title>What's On Tap?</title>
+  <title>Beer On Tap</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div id="header">
-    <h1>What's On Tap?</h1>
-  </div>
+  <nav class="white">
+    <div class="container">
+      <a href="/" class="brand-logo">Beer On Tap</a>
+    </div>
+  </nav>
+  <%= yield %>
 
-  <div class="container">
-    <%= yield %>
-  </div>
-
-  <div id="footer">
-  </div>
+  <footer class="page-footer amber darken-2">
+    <div class="container">
+      <div class="row">
+        <div class="col s6">
+          <h5 class="white-text">About this site</h5>
+          <p class="white-text">Some text to fill up the page. Hi guys how are you doing. Do you like beer? Sounds good, I like beer too.</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        Copyright &copy; 2016 Beer On Tap by Reggie Kim
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
 <script src="/js/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 <script src="/js/script.js" type="text/javascript"></script>
+
