--- a/views/search.erb
+++ b/views/search.erb
@@ -1,21 +1,34 @@
-<form action='/search' method='GET'>
-  <input placeholder="Enter Beer" type="text" name="beer" />
-  <button id="beer-search">Submit</button>
-</form>
+<div class="container" id="search-div">
+  <form action='/search' method='GET'>
+    <input placeholder="Enter Beer" type="text" name="beer" />
+    <button class="btn waves-effect waves-light amber darken-2" id="beer-search">Search</button>
+  </form>
+  <br>
 
-<% if @beer %>
-  <div>
-    <div>
-      <img src="<%= @beer[:label] %>" />
-      <p><%= @beer[:name] %></p>
+  <% if @beer %>
+    <div class="row">
+      <div class="col s6">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="<%= @beer[:label] %>" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= @beer[:name] %><i class="material-icons right">more</i></span>
+            <p id="beer-abv"><em>ABV:</em> <%= @beer[:abv] %></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= @beer[:name] %><i class="material-icons right">close</i></span>
+            <p id="beer-type"><%= @beer[:style] %></p>
+            <p id="beer-abv"><em>ABV:</em> <%= @beer[:abv] %></p>
+            <p id="beer-desc"><em>Description:</em><br><%= @beer[:description] %></p>
+            <p id="beer-type-desc"><em>Type Info:</em><br><%= @beer[:styleInfo] %></p>
+          </div>
+        </div>
+      </div>
     </div>
-    <p>Beer Type: <%= @beer[:style] %></p>
-    <p>ABV: <%= @beer[:abv] %></p>
-    <p>Description: <%= @beer[:description] %></p>
-    <p>Type Info: <%= @beer[:styleInfo] %></p>
-  </div>
-<% else %>
-  <div>
-    <p>Sorry we don't have this beer in our database.</p>
-  </div>
-<% end %>
+  <% else %>
+    <div>
+      <p>Sorry we don't have this beer in our database.</p>
+    </div>
+  <% end %>
+</div>
