--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,8 @@
+<nav class="white">
+  <div class="container">
+    <a href="/" class="brand-logo">Beer On Tap</a>
+  </div>
+</nav>
 <div class="row intro">
   <div class="container" id="welcome-text">
     <h2>Welcome to Beer On Tap</h2>
