--- a/views/search.erb
+++ b/views/search.erb
@@ -1,3 +1,9 @@
+<nav class="amber darken-2">
+  <div class="container">
+    <a href="/" class="brand-logo" id="search-header">Beer On Tap</a>
+  </div>
+</nav>
+<br>
 <div class="container" id="search-div">
   <form action='/search' method='GET'>
     <input placeholder="Enter Beer" type="text" name="beer" />
@@ -5,29 +11,31 @@
   </form>
   <br>
 
-  <% if @beer %>
+  <% if @beers %>
     <div class="row">
-      <div class="col s6">
-        <div class="card medium">
+    <% @beers.each do | beer | %>
+      <div class="col s12 m6">
+        <div class="card large">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="<%= @beer[:label] %>" />
+            <img class="activator" src="<%= beer[:label] %>" />
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"><%= @beer[:name] %><i class="material-icons right">more</i></span>
-            <p id="beer-abv"><em>ABV:</em> <%= @beer[:abv] %></p>
+            <span class="card-title activator grey-text text-darken-4"><%= beer[:name] %></span>
+            <p id="beer-abv"><em>ABV:</em> <%= beer[:abv] %></p>
+            <p id="beer-type"><%= beer[:style] %></p>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><%= @beer[:name] %><i class="material-icons right">close</i></span>
-            <p id="beer-type"><%= @beer[:style] %></p>
-            <p id="beer-abv"><em>ABV:</em> <%= @beer[:abv] %></p>
-            <p id="beer-desc"><em>Description:</em><br><%= @beer[:description] %></p>
-            <p id="beer-type-desc"><em>Type Info:</em><br><%= @beer[:styleInfo] %></p>
+            <span class="card-title grey-text text-darken-4"><%= beer[:name] %><i class="material-icons right">X</i></span>
+            <p id="beer-desc"><em>Description:</em><br><%= beer[:description] %></p>
+            <p id="beer-type-desc"><em>More about <%= beer[:style] %>:</em><br><%= beer[:styleInfo] %></p>
           </div>
         </div>
       </div>
+    <% end %>
     </div>
   <% else %>
     <div>
+      <img id= "no-beer" src="/img/no_beer.png" />
       <p>Sorry we don't have this beer in our database.</p>
     </div>
   <% end %>
